# example-bazel-worker

./: WORKSPACE  package.json  pnpm-lock.yaml
src/: BUILD.bazel  styles.css.js  styles.css.module.css
src/css_modules/: BUILD.bazel  defs.bzl  worker.js
